// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders 1`] = `
<div
  className="sc-bUabYq jnlMQR"
>
  <div
    className="sc-crwTFP iDMsoO"
  >
    <div
      className="sc-dOeoAH fkPUdH"
    >
      <div
        className="sc-fXnaaH isvFDv"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-fStMfJ jtVBye"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-dYpzDs czslDf"
  />
</div>
`;

exports[`Banner renders in mobile mode 1`] = `
<div
  className="sc-bUabYq fHmlXe"
>
  <div
    className="sc-crwTFP iDMsoO"
  >
    <div
      className="sc-dOeoAH fkPUdH"
    >
      <div
        className="sc-fXnaaH isvFDv"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-fStMfJ jtVBye"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-dYpzDs czslDf"
  >
    <span>
      <button
        className="sc-dcrfrI ecPhUb"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-jyjSAB kCieNu"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-dcrfrI ljAtDo"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-jyjSAB kCieNu"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders in single line mode 1`] = `
<div
  className="sc-bUabYq jnlMQR"
>
  <div
    className="sc-crwTFP efMLzv"
  >
    <div
      className="sc-fStMfJ fcgEyQ"
    >
      Your email is not verified. Verify to enable withdrawals.
    </div>
    <div
      className="sc-dYpzDs czslDf"
    >
      <button
        className="sc-dcrfrI hGYyGw"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Resend verification link to email ›
        <div
          className="sc-jyjSAB kCieNu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner renders with buttons 1`] = `
<div
  className="sc-bUabYq dnJOSb"
>
  <div
    className="sc-crwTFP iDMsoO"
  >
    <div
      className="sc-dOeoAH fkPUdH"
    >
      <div
        className="sc-fXnaaH isvFDv"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-fStMfJ jtVBye"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-dYpzDs czslDf"
  >
    <span>
      <button
        className="sc-dcrfrI ecPhUb"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-jyjSAB kCieNu"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-dcrfrI ljAtDo"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-jyjSAB kCieNu"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders with buttons RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-bUabYq dnJOSb"
  >
    <div
      className="sc-crwTFP iDMsoO"
    >
      <div
        className="sc-dOeoAH fkPUdH"
      >
        <div
          className="sc-fXnaaH isvFDv"
        >
          Title here
        </div>
      </div>
      <div
        className="sc-fStMfJ jtVBye"
      >
        Lorem ipsum dolor...
      </div>
    </div>
    <div
      className="sc-dYpzDs czslDf"
    >
      <span>
        <button
          className="sc-dcrfrI ecPhUb"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Discard
          <div
            className="sc-jyjSAB kCieNu"
          />
        </button>
      </span>
      <span>
        <button
          className="sc-dcrfrI ljAtDo"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Confirm
          <div
            className="sc-jyjSAB kCieNu"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with header icon 1`] = `
<div
  className="sc-bUabYq jnlMQR"
>
  <div
    className="sc-crwTFP iDMsoO"
  >
    <div
      className="sc-dOeoAH fkPUdH"
    >
      <div
        className="sc-fXnaaH isvFDv"
      >
        Title here
      </div>
      <div
        className="sc-kteYBe dbSJty"
      >
        <svg
          className="sc-gwvkYY"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-fStMfJ jtVBye"
    >
      Lorem ipsum dolor...
    </div>
  </div>
</div>
`;
